--- a/project/styles.css
+++ b/project/styles.css
@@ -18,6 +18,96 @@ body {
     }
 }
 .cup {
+    &-body {
+        position: absolute;
+        width: 241px;
+        height: 324px;
+        border-radius: 18px;
+        background: #4D343F;
+        left: 205px;
+        top: 179px;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 175px;
+            height: 308px;
+            background: inherit;
+            left: -19px;
+            top: 0;
+            background: inherit;
+            transform: skew(7deg, 0deg);
+        }
+        &:after {
+            content: '';
+            position: absolute;
+            width: 175px;
+            height: 308px;
+            background: inherit;
+            right: -19px;
+            top: 0;
+            background: inherit;
+            transform: skew(-7deg, 0deg);
+        }
+    }
+    &-label {
+        background: #84505B;
+        position: absolute;
+        width: 264px;
+        height: 192px;
+        border-radius: 10px;
+        left: 193px;
+        top: 251px;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 175px;
+            height: 191px;
+            left: -10px;
+            top: 0;
+            background: inherit;
+            transform: skew(7deg, 0deg);
+            border-radius: 11px;
+        }
+        &:after {
+            content: '';
+            position: absolute;
+            width: 175px;
+            height: 191px;
+            right: -10px;
+            top: 0;
+            background: inherit;
+            transform: skew(-7deg, 0deg);
+            border-radius: 11px;
+        }
+    }
+    &-label-red {
+        background: #CE605A;
+        position: absolute;
+        width: 264px;
+        height: 145px;
+        left: 193px;
+        top: 274px;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 175px;
+            height: 148px;
+            left: -10px;
+            top: 0;
+            background: inherit;
+            transform: skew(7deg, 0deg);
+        }
+        &:after {
+            content: '';
+            position: absolute;
+            width: 175px;
+            height: 148px;
+            right: -10px;
+            top: 0;
+            background: inherit;
+            transform: skew(-7deg, 0deg);
+        }
+    }
     &-upper{
         background: #784451;
         position: absolute;
@@ -70,6 +160,59 @@ body {
             background: #9C6471;
             bottom: 0;
             border-radius: 0 20px 20px 0;
+        }
+    }
+    &-bottom{
+        background: #784451;
+        position: absolute;
+        top: 160px;
+        left: 166px;
+        height: 41px;
+        width: 324px;
+        border-radius: 12px;
+        &:before {
+            content: '';
+            position: absolute;
+            left: -4px;
+            width: 40px;
+            height: 41px;
+            background: inherit;
+            bottom: 0;
+            border-radius: 12px;
+            transform: skew(-20deg, 0deg);
+        }
+        &:after{
+            content: '';
+            position: absolute;
+            right: -4px;
+            width: 40px;
+            height: 41px;
+            background: inherit;
+            bottom: 0;
+            border-radius: 12px;
+            transform: skew(20deg, 0deg);
+        }
+        &-shadow {
+            position: absolute;
+            bottom: 0;
+            left: 1px;
+            width: 231px;
+            height: 29px;
+            border-radius: 0 19px 19px 0;
+            background: #84505B;
+            z-index: 1;
+            &:after {
+                content: '';
+                position: absolute;
+                left: -7px;
+                width: 40px;
+                height: 29px;
+                background: #84505B;
+                bottom: 0;
+                border-radius: 0 0 0 12px;
+                transform: skew(-24deg, 0deg);
+                z-index: 1;
+            }
         }
     }
 }
