--- a/project/styles.css
+++ b/project/styles.css
@@ -6,14 +6,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: grey;
+    background: #F9D3C0;
     height: 100vh;
-
 
     &__content {
         width: 600px;
         height: 600px;
-        background: #F9D3C0;
         position: relative;
     }
 }
@@ -26,6 +24,7 @@ body {
         background: #4D343F;
         left: 205px;
         top: 179px;
+
         &:before {
             content: '';
             position: absolute;
@@ -37,6 +36,7 @@ body {
             background: inherit;
             transform: skew(7deg, 0deg);
         }
+
         &:after {
             content: '';
             position: absolute;
@@ -48,6 +48,7 @@ body {
             background: inherit;
             transform: skew(-7deg, 0deg);
         }
+
         &-shadow {
             position: absolute;
             top: 215px;
@@ -56,6 +57,7 @@ body {
             height: 38px;
             border-radius: 0 45px 45px 0;
             background: #5B4049;
+
             &:after {
                 content: '';
                 position: absolute;
@@ -76,6 +78,7 @@ body {
             height: 46px;
             border-radius: 0 45px 45px 27px;
             background: #5B4049;
+
             &:after {
                 content: '';
                 position: absolute;
@@ -97,6 +100,7 @@ body {
         border-radius: 10px;
         left: 193px;
         top: 251px;
+
         &:before {
             content: '';
             position: absolute;
@@ -127,6 +131,7 @@ body {
         height: 145px;
         left: 193px;
         top: 274px;
+
         &:before {
             content: '';
             position: absolute;
@@ -137,6 +142,7 @@ body {
             background: inherit;
             transform: skew(7deg, 0deg);
         }
+
         &:after {
             content: '';
             position: absolute;
@@ -147,6 +153,7 @@ body {
             background: inherit;
             transform: skew(-7deg, 0deg);
         }
+
         &-shadow {
             position: absolute;
             top: 27px;
@@ -157,6 +164,7 @@ body {
             z-index: 1;
             transform: skew(0deg, -1deg);
             background: #DD6C65;
+
             &:after {
                 content: '';
                 position: absolute;
@@ -178,6 +186,7 @@ body {
         height: 25px;
         width: 52px;
         border-radius: 7px 10px 0 0;
+
         &:before {
             content: '';
             border-bottom: 22px solid #784451;
@@ -186,6 +195,7 @@ body {
             right: -7px;
             top: 3px;
         }
+
         &:after {
             content: '';
             border-bottom: 25px solid #84505B;
@@ -194,6 +204,7 @@ body {
             left: -47px;
             top: 0px;
         }
+
         &-shadow {
             position: absolute;
             top: 1px;
@@ -205,6 +216,7 @@ body {
             background: #84505B;
         }
     }
+
     &-middle{
         background: #955C6B;
         position: absolute;
@@ -213,6 +225,7 @@ body {
         height: 27px;
         width: 279px;
         border-radius: 12px 12px 0 0;
+
         &:after {
             content: '';
             position: absolute;
@@ -232,6 +245,7 @@ body {
         height: 41px;
         width: 324px;
         border-radius: 12px;
+
         &:before {
             content: '';
             position: absolute;
@@ -243,6 +257,7 @@ body {
             border-radius: 12px;
             transform: skew(-20deg, 0deg);
         }
+
         &:after{
             content: '';
             position: absolute;
@@ -254,6 +269,7 @@ body {
             border-radius: 12px;
             transform: skew(20deg, 0deg);
         }
+
         &-shadow {
             position: absolute;
             bottom: 0;
@@ -263,6 +279,7 @@ body {
             border-radius: 0 19px 19px 0;
             background: #84505B;
             z-index: 1;
+
             &:after {
                 content: '';
                 position: absolute;
@@ -284,6 +301,7 @@ body {
     left: 114px;
     width: 391px;
     height: 6px;
+
     &:before,
     &:after {
         content: '';
@@ -293,10 +311,12 @@ body {
         background: #4D343F;
         position: absolute;
     }
+
     &:before {
         width: 33px;
         left: 0;
     }
+    
     &:after {
         width: 350px;
         right:0;
@@ -308,6 +328,7 @@ body {
     top: 300px;
     width: 172px;
     height: 96px;
+
     &-eyes {
         position: absolute;
         width: 13px;
@@ -318,6 +339,7 @@ body {
         z-index: 1;
         left: 41px;
         top: 32px;
+
         &:before {
             content: '';
             width: 13px;
@@ -339,6 +361,7 @@ body {
         z-index: 1;
         left: 75px;
         top: 48px;
+
         &:after {
             content: '';
             position: absolute;
@@ -362,49 +385,28 @@ body {
         }
     }
 }
-.spots {
-    background: #F7CDBB;
-    width: 140px;
-    height: 133px;
-    border-radius: 100%;
-    transform: skew(8deg, 0deg);
+.like {
     position: absolute;
-    top: 144px;
-    left: 63px;
+    background: #DC6D64;
+    width: 161px;
+    height: 55px;
+    border-radius: 9px;
+    left: 243px;
+    top: 18px;
+    color: #F3D4BF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 41px;
 
     &:before {
         content: '';
-        width: 188px;
-        height: 133px;
-        border-radius: 100%;
-        transform: skew(-4deg, -5deg);
         position: absolute;
-        top: 182px;
-        left: -17px;
-        background: inherit;
+        height: 50px;
+        left: 63px;
+        top: 50px;
+        border-left: 17px solid transparent;
+        border-right: 17px solid transparent;
+        border-top: 20px solid #DC6D64;
     }
-    &:after {
-        content: '';
-        width: 291px;
-        height: 152px;
-        border-radius: 126px;
-        transform: skew(-18deg, -6deg) rotate(-26deg);
-        position: absolute;
-        top: 118px;
-        left: 201px;
-        background: inherit;
-    }
-
-    &-2 {
-        background: #F7CDBB;
-        width: 362px;
-        height: 327px;
-        border-radius: 100%;
-        position: absolute;
-        top: 160px;
-        left: 129px;
-    }
-}
-.is-hidden {
-    display: none;
 }
